# jot

./: .env  Cargo.toml  README  config.yaml
src/: create.rs  down.rs  main.rs  view.rs
