[package]
name = "jot"
version = "0.1.0"
authors = ["Michael Zavarella <mzavarella30@gmail.com>"]
edition = "2018"
log = "version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
structopt = "0.3"
dotenv = "0.15.0"
tinytemplate = "1.1"
serde = "1.0"
serde_derive = "1.0"
